# Agile

./: .coverage  README.md  db.sqlite3  mikscard-Agile_Values_Characteristics-1.0.0-resolved.yaml  pyproject.toml
agile/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
agile/fixtures/: load_data_to_db.json
agile/migrations/: 0001_initial.py
agile/templates/agile/: characteristic_edit.html  index.html  value_detail.html  value_edit.html
akka-scala/: swagger.json
htmlcov/: agile___init___py.html  agile_admin_py.html  agile_apps_py.html  agile_migrations_0001_initial_py.html  agile_migrations___init___py.html  agile_models_py.html  agile_tests_py.html  agile_tests_test_urls_py.html  agile_urls_py.html  agile_views_py.html  index.html  status.json  task1___init___py.html  task1_settings_py.html  task1_urls_py.html
task1/: asgi.py  settings.py  urls.py  wsgi.py
task1.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: base.html  home.html
